# wot

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  README.md  canonic.md  command_help.txt  hash.md  identity_bitcoin.md
doc/examples/: example.toml
etc/: config.toml
src/: CMakeLists.txt  algo.hpp  cache_sig.cpp  cache_sig.hpp  check_filters.hpp  command.hpp  commands.hpp  config.cpp  config.hpp  db.cpp  db.hpp  db_nodes.cpp  db_nodes.hpp  disk_db.cpp  disk_db.hpp  electrum.cpp  electrum.hpp  filter.cpp  filter.hpp  filters.hpp  graph.cpp  graph.hpp  hash_set.cpp  hash_set.hpp  identity.cpp  identity.hpp  link.json  math.hpp  node.cpp  node.hpp  node.json  program.cpp  program.hpp  schema.json  signature.cpp  signature.hpp  vm_t.cpp  vm_t.hpp  wot.cpp
src/commands/: add_command.hpp  add_sig_command.hpp  badge_command.hpp  compose_command.hpp  hash_object_command.hpp  ls_command.hpp  ls_nodes_command.hpp  ls_on_command.hpp  ls_rules_command.hpp  ls_sig_command.hpp  rm_sig_command.hpp  show_command.hpp  sign_command.hpp  sign_toml_command.hpp  solve_command.hpp  template_config_file_command.hpp  template_options_file_command.hpp  verify_command.hpp  view_command.hpp
src/filters/: all_child_known_filter.cpp  always_true_filter.cpp  always_true_filter.hpp  any_child_known_filter.cpp  any_on_filter.cpp  bitcoin_key_filter.cpp  bitcoin_key_filter.hpp  contains_to_filter.cpp  from_filter.cpp  from_filter.hpp  grep_filter.cpp  grep_filter.hpp  hash_filter.cpp  hash_filter.hpp  is_current_filter.cpp  new_serial_filter.cpp  no_self_link_filter.cpp  on_filter.cpp  rule_filter.cpp  rule_filter.hpp  serial_epoch_in_future_filter.cpp  serial_epoch_in_future_filter.hpp  serial_epoch_in_past_filter.cpp  serial_epoch_in_past_filter.hpp  serial_yyyymmdd_filter.cpp  serial_yyyymmdd_filter.hpp  to_filter.cpp  to_filter.hpp  unit_is_filter.cpp  value_greater_than_filter.cpp  value_less_than_filter.cpp
src/interfaces/: db.hpp  db_interface.hpp  readonly_db.hpp  signer.hpp  verifier.hpp
test/: CMakeLists.txt  README.md  config.cpp  disk_db.cpp  graph.cpp  identity.cpp  main.cpp  node.cpp  node1s.toml  program.cpp
test/commands/: CMakeLists.txt  add_command.cpp  compose_command.cpp  sign_command.cpp  solve_command.cpp  verify_command.cpp
test/filters/: CMakeLists.txt  bitcoin_key_filter.cpp  contains_to_filter.cpp  from_filter.cpp  grep_filter.cpp  hash_filter.cpp  on_filter.cpp  rule_filter.cpp  serial_epoch_in_future_filter.cpp  serial_epoch_in_past_filter.cpp  serial_yyyymmdd_filter.cpp  to_filter.cpp
